panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__string__test_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/string/test_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (noop-type-conversion `ptr<char>`
               (addressof `ptr<array<char; 15>>`
                  (string `array<char; 15>` "ignored string\0"))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 25>>`
                        (string `array<char; 25>` "some string concatenated\0"))))))
         (definition char_star~3 `ptr<char>`
            (noop-type-conversion `ptr<char>`
               (addressof `ptr<array<char; 10>>`
                  (string `array<char; 10>` "char star\0"))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>` (char_star~3 `ptr<char>`))))
         (definition char_const_star~4 `ptr<char const>`
            (noop-type-conversion `ptr<char const>`
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 16>>`
                     (string `array<char; 16>` "char const star\0")))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (char_const_star~4 `ptr<char const>`)))
         (return (truncate `int` (lengthof `unsigned long` 7 (string `array<char; 7>` "string\0")))))))

----- stderr -----
