panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__string__test_string_literal_is_lvalue.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/string/test_string_literal_is_lvalue.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal_is_lvalue.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition hello~3 `ptr<array<char; ∅>>`
            (addressof `ptr<array<char; 6>>`
               (string `array<char; 6>` "hello\0")))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; ∅>>`
                        (deref `array<char; ∅>` (hello~3 `ptr<array<char; ∅>>`)))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (addressof `ptr<char>`
                     (deref `char`
                        (noop-type-conversion `ptr<char>`
                           (addressof `ptr<array<char; 6>>`
                              (string `array<char; 6>` "world\0")))))))))))

----- stderr -----
