panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__string__test_string_literal_simple_escape_sequences.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/string/test_string_literal_simple_escape_sequences.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 12>>`
                     (string `array<char; 12>` "abc?\"'\\'def\0")))))
         (return (truncate `int` (lengthof `unsigned long` 2 (string `array<char; 2>` "\n\0")))))))

----- stderr -----
